# avito-trainee-solution-2025-autumn

./: Dockerfile  README.md  boot.sh  config.py  custom.py  docker-compose.yml  pyproject.toml
app/: __init__.py  entities.py  exceptions.py  main.py  models.py  repositories.py  routes.py  schemas.py  services.py  utils.py
migrations/versions/: 3fc84d610472_.py  592586b3d15d_.py
